[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Jogador/Esquerda.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Jogador/Jogador.gd" type="Script" id=2]
[ext_resource path="res://assets/Sons/Roberto/TiroRoberto.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/Sons/Roberto/DanoRoberto.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/Sons/Roberto/MorteRoberto.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/Sons/Roberto/PassoRoberto.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/Sons/Roberto/PuloRoberto.wav" type="AudioStream" id=7]
[ext_resource path="res://Scenes/Jogador/Coringa.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Jogador/HUD.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 58.5731, 69.3229 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 41.6568, 3.62115 )

[sub_resource type="Animation" id=3]
resource_name = "FadeInOut"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="Jogador" type="KinematicBody2D"]
z_index = 2
collision_mask = 116
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4.4545, 2.6727 )
scale = Vector2( 1, 1.04933 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.13, 0.13 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 98.8386 )
scale = Vector2( 1.72, 1 )
collision_layer = 524288
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -16 )
shape = SubResource( 2 )

[node name="DanoSom" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="MorteSom" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="PassoSom" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="PuloSom" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="TiroSom" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Coringa" parent="." instance=ExtResource( 8 )]
position = Vector2( -88.0507, -72.8405 )
z_index = 4

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 6
zoom = Vector2( 2, 2 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="FadeInOutRect" type="ColorRect" parent="Camera2D"]
visible = false
margin_left = -1572.0
margin_top = -788.0
margin_right = 1566.0
margin_bottom = 909.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeInOut" type="AnimationPlayer" parent="Camera2D/FadeInOutRect"]
anims/FadeInOut = SubResource( 3 )

[node name="HUD" parent="." instance=ExtResource( 9 )]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
